# ClipTranslate

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  ai_context_helper.py  build.py  clipTranslate.spec  main.py  png_to_ico.py  problem_list.md  pyproject.toml
.claude/: settings.local.json
src/: config_manager.py  constants.py  main.py  translator.py  translator_thread.py  ui_settings.py  ui_translation.py  utils.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_translator.py  test_utils.py
